# HeadlessGhidraMCP

./: .env.example  .gitignore  clean.py  ghidra_mcp.py  pyproject.toml  pytest.ini  readme.md  run.py  setup_project.py  verify_hints.py
GhidraScripts/: GhidraDataDump.java
scripts/ghidra/: GhidraDataDump.java
src/: __init__.py  analyzer.py  cache.py  config.py  ghidra_mcp.py  platform_utils.py  response_utils.py  server.py  session.py
src/tools/: __init__.py  analysis.py  graph.py  inspection.py  metadata.py  query.py  system.py
tests/: conftest.py
tests/integration/: test_analysis_flow.py  test_ghidra_detection.py  test_memory.py  test_robustness.py  test_security.py
tests/unit/: test_analysis_reporting.py  test_cache.py  test_config.py  test_inspection.py  test_pagination.py  test_platform_utils.py  test_scan.py  test_session.py  test_tools_graph.py  test_tools_metadata.py
