[project]
name = "headless-ghidra-mcp"
version = "1.0.0"
description = "MCP server for Ghidra-based binary analysis"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "ijson>=3.2",
    "pefile>=2023.2.7",
    "capstone>=5.0.1",
    "pyelftools>=0.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ghidra-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
